# alignment-drift-llms

./: .gitignore  README.md  makefile  pyproject.toml
data/: README.md  v1.1_perplexity.csv  v2.0_dataset.csv  v2.0_perplexity.csv  v3.0_dataset.csv
metrics/: README.md  v2.0_text_stats.csv  v2.0_textdescriptives.csv  v3.0_surprisal.csv  v3.0_text_stats.csv  v3.0_textdescriptives.csv
plots/: combined_v2.0_model_comparison.html  fernandez_huerta_plot.html  mlx-community--Qwen2.5-7B-Instruct-1M-4bit_v2.0_fernandez_huerta_plot.html  mlx-community--Qwen2.5-7B-Instruct-1M-4bit_v2.0_flesch_kincaid_grade_plot.html  mlx-community--Qwen2.5-7B-Instruct-1M-4bit_v2.0_flesch_reading_ease_plot.html  mlx-community--meta-Llama-3.1-8B-Instruct-4bit_v2.0_fernandez_huerta_plot.html  mlx-community--meta-Llama-3.1-8B-Instruct-4bit_v2.0_flesch_kincaid_grade_plot.html  mlx-community--meta-Llama-3.1-8B-Instruct-4bit_v2.0_flesch_reading_ease_plot.html  v1.1_fernandez_huerta_plot.html  v1.1_flesch_kincaid_grade_plot.html  v1.1_flesch_reading_ease_plot.html  v1.1_perplexity_plot.html  v2.0_fernandez_huerta_plot.html  v2.0_flesch_kincaid_grade_plot.html  v2.0_flesch_reading_ease_plot.html  v2.0_perplexity_plot.html
results/v3.0/: agg_spanish_readability_high_easy.csv
results/v3.0/mixed_effects/: readability_table.tex  (+4 more)
src/: README.md  create_dataset.py  extract-td.py  extract_metrics.py  modeling.ipynb  perplexity.py  plot.ipynb  plot_functions.py  plots.py  plotting.ipynb  plotting.py  stats.Rmd  text-stats.py  utils.py
src/utils/: lang_detect.py  metrics_process.py  text_process.py
(+868 files in other folders)
